# chiliAI

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROLES-GUIDE.md  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  repo_structure.txt  ~$ummary.docx
backend/: .coverage  .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/agent/: __init__.py  coordinator.py  exceptions.py  health.py  models.py  protocols.py  service.py  service_models.py  workflow_tracking.py
backend/agent/adapters/: __init__.py  in_memory.py  protocols.py  redis_store.py  runtime.py
backend/analytics/: README.md  __init__.py
backend/analytics/explainability/: __init__.py  exceptions.py  models.py  protocols.py  service.py  service_models.py
backend/analytics/gnn/: __init__.py  exceptions.py  models.py  protocols.py  service.py  service_models.py
backend/analytics/metrics/: README.md  __init__.py  exceptions.py  models.py  throttle.py
backend/analytics/risk/: __init__.py  exceptions.py  models.py  protocols.py  service.py  service_models.py
backend/analytics/timeseries/: __init__.py  exceptions.py  models.py  protocols.py  service.py  service_models.py
backend/api/: _alert_store.py  _kb_projection.py  _kb_store.py  _rag_bridges.py  _workflow_projection.py  app.py  contracts.py  dependencies.py  read_models.py  state.py
backend/api/middleware/: __init__.py  auth.py  exceptions.py  metrics.py  policy_registry.py  rbac.py  session_store.py
backend/api/routers/: __init__.py  _oidc_client.py  alerts.py  analytics.py  auth.py  cases.py  chat.py  config.py  events.py  evidence.py  graph.py  investigation.py  knowledgebases.py  policy.py  rag.py  records.py  workflows.py  ws.py
backend/config/: __init__.py  loader.py  schema.py
backend/config/defaults/: food_supply_chain.yaml  medicare_fraud.yaml  medicare_fraud_dev.yaml
backend/database/: README.md  __init__.py  engine.py  exceptions.py  health.py  protocols.py  runtime.py
backend/database/migrations/: env.py  script.py.mako
backend/embeddings/: __init__.py  exceptions.py  models.py  protocols.py  service.py  service_models.py
backend/embeddings/adapters/: __init__.py  in_memory.py  openai_adapter.py  protocols.py  sentence_transformers_adapter.py
backend/events/: __init__.py  codec.py  protocols.py  runtime.py  types.py
backend/events/adapters/: __init__.py  in_memory.py  redis_streams.py
backend/graph/: __init__.py  auth.py  builder.py  exceptions.py  models.py  protocols.py  service.py  service_models.py
backend/graph/adapters/: __init__.py  in_memory.py  neo4j_adapter.py  protocols.py
backend/ingestion/: __init__.py  chunker.py  extractor.py  models.py  protocols.py  service.py  service_models.py  validator.py
backend/ingestion/orchestrators/: __init__.py  batch.py  format_resolver.py  parser.py  protocols.py  source_documents.py
backend/ingestion/parsers/: __init__.py  csv.py  docx.py  exceptions.py  html.py  json.py  pdf.py  protocols.py  registry.py  remote.py  txt.py  utils.py  xlsx.py
backend/llm/: __init__.py  exceptions.py  models.py  protocols.py  service.py  service_models.py
backend/llm/adapters/: __init__.py  anthropic_adapter.py  in_memory.py  openai_adapter.py  protocols.py
backend/monitoring/: __init__.py  exceptions.py  metrics.py  models.py  protocols.py  service.py  service_models.py
backend/monitoring/adapters/: __init__.py  in_memory.py  postgres.py  protocols.py
backend/rag/: __init__.py  exceptions.py  models.py  protocols.py  service.py  service_models.py
backend/rag/adapters/: __init__.py  embeddings_bridge.py  graph_bridge.py  in_memory.py  llm_bridge.py  protocols.py  vectorstore_bridge.py
backend/records/: README.md  __init__.py  exceptions.py  models.py  protocols.py  service.py  service_models.py  validation.py
backend/records/adapters/: __init__.py  in_memory.py  postgres.py  protocols.py
backend/records/mappers/: __init__.py  feed_mapper.py
backend/shared/: __init__.py  alerts.py  exceptions.py  logging.py  protocols.py  tracing.py  types.py  utils.py  validation.py
backend/storage/: __init__.py  models.py  protocols.py
backend/storage/adapters/: __init__.py  in_memory.py  local_fs_adapter.py  s3_adapter.py
backend/tests/: conftest.py
backend/tests/agent/: __init__.py  test_alerts_created_graph_flow.py  test_coordinator.py  test_coordinator_graph_auth.py  test_graph_metrics_flow.py  test_health.py  test_in_memory_adapter.py  test_models.py  test_records_handler.py  test_redis_workflow_run_store.py  test_risk_scored_graph_flow.py  test_service.py  test_workflow_tracking.py
backend/tests/analytics/: __init__.py
backend/tests/api/: test_alert_store_object_store.py  test_alerts_router.py  test_analytics_router.py  test_app.py  test_auth_middleware.py  test_auth_router.py  test_chat_router.py  test_config_router.py  test_dependencies.py  test_events_router.py  test_input_validation.py  test_investigation_router.py  test_kb_projection.py  test_knowledgebases_router.py  test_metrics.py  test_monitoring_source_selection.py  test_oidc_client.py  test_phase5_stateful_routes.py  test_policy_registry.py  test_production_guardrail.py  test_rbac.py  test_read_model_routers.py  test_records_router.py  test_session_store.py  test_state_domain_config.py  test_workflow_projection.py  test_workflows_router.py  test_ws_router.py
backend/tests/config/: test_loader.py  test_schema.py
backend/tests/database/: conftest.py  test_config.py  test_engine.py  test_engine_unit.py  test_exceptions.py  test_health.py  test_migrations.py  test_protocols.py  test_runtime.py
backend/tests/e2e/: __init__.py  conftest.py  test_full_pipeline.py
backend/tests/embeddings/: __init__.py  test_in_memory_adapter.py  test_models.py  test_openai_adapter.py  test_sentence_transformers_adapter.py  test_service.py
backend/tests/events/: test_codec.py  test_in_memory.py  test_records_event.py  test_redis_streams.py  (+1 more)
backend/vectorstore/: __init__.py  exceptions.py  models.py  protocols.py  service.py  service_models.py
(+714 files in other folders)
