[project]
name = "chili-backend"
version = "0.1.0"
description = "chiliAI backend — FastAPI gateway, pipeline workers, and analytics modules for a domain-reconfigurable Graph RAG analytics platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34",
    "pypdf>=5.4",
    "redis>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]
neo4j = [
    "neo4j>=5,<6",
]
qdrant = [
    "qdrant-client[grpc]>=1.9",
]
sentence-transformers = [
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "agent*", "shared*", "config*", "events*", "storage*",
           "ingestion*", "graph*", "vectorstore*", "embeddings*", "rag*",
           "llm*", "analytics*", "monitoring*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services or optional dependencies",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["graph", "tests/graph"]
exclude = ["**/__pycache__", "chili_backend.egg-info"]
