[project]
name = "chili-backend"
version = "0.1.0"
description = "chiliAI backend — FastAPI gateway, pipeline workers, and analytics modules for a domain-reconfigurable Graph RAG analytics platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34",
    "pypdf>=5.4",
    "redis>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "structlog>=24.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "moto[s3]>=5.0",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]
neo4j = [
    "neo4j>=5,<6",
]
qdrant = [
    "qdrant-client[grpc]>=1.9",
]
sentence-transformers = [
    "sentence-transformers>=3.0",
]
openai = [
    "openai>=1.76",
]
anthropic = [
    "anthropic>=0.51",
]
s3 = [
    "boto3>=1.34",
]
analytics = [
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "networkx>=3.0",
    "numpy>=1.26",
    "shap>=0.43",
]
auth = [
    "python-jose[cryptography]>=3.3",
]
postgres = [
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "alembic>=1.13",
]
observability = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "opentelemetry-exporter-otlp>=1.20",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "agent*", "shared*", "config*", "events*", "storage*",
           "ingestion*", "graph*", "vectorstore*", "embeddings*", "rag*",
           "llm*", "analytics*", "monitoring*", "database*", "records*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services or optional dependencies",
    "e2e: end-to-end pipeline tests that exercise multiple modules through public APIs",
]

[tool.coverage.run]
omit = ["database/migrations/*"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = [
    "agent",
    "analytics/gnn",
    "analytics/timeseries",
    "api/_alert_store.py",
    "api/_kb_projection.py",
    "api/_kb_store.py",
    "api/_workflow_projection.py",
    "api/middleware/auth.py",
    "api/middleware/rbac.py",
    "api/middleware/session_store.py",
    "api/routers/alerts.py",
    "api/routers/records.py",
    "api/routers/investigation.py",
    "api/routers/knowledgebases.py",
    "api/routers/workflows.py",
    "api/routers/ws.py",
    "database",
    "events",
    "graph",
    "monitoring",
    "records",
    "tests/agent",
    "tests/analytics/gnn",
    "tests/analytics/timeseries",
    "tests/api/test_alert_store_object_store.py",
    "tests/api/test_chat_router.py",
    "tests/api/test_investigation_router.py",
    "tests/api/test_kb_projection.py",
    "tests/api/test_metrics.py",
    "tests/api/test_policy_registry.py",
    "tests/api/test_production_guardrail.py",
    "tests/api/test_records_router.py",
    "tests/api/test_ws_router.py",
    "tests/api/test_workflow_projection.py",
    "tests/api/test_workflows_router.py",
    "tests/database",
    "tests/e2e",
    "tests/events",
    "tests/graph",
    "tests/monitoring/test_postgres_observation_store.py",
    "tests/records",
]
exclude = ["**/__pycache__", "chili_backend.egg-info"]
